objects/FinancialAccountFile__c.object
<CustomObject>
    <fields>
        <fullName>DoNotDisplayReason__c</fullName>
        <description>Reason this file should not be displayed to community members</description>
        <inlineHelpText>Reason this file should not be displayed to community members</inlineHelpText>
        <label>Do Not Display Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoNotDisplayinCommunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this file will not be viewable by community members</description>
        <inlineHelpText>If checked, this file will not be viewable by community members</inlineHelpText>
        <label>Do Not Display in Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocumentDate__c</fullName>
        <description>The effective date of the document.  For example, the Document Date would be 3/31 for a Q2 document even though the file record might have a created date of 4/15.</description>
        <inlineHelpText>The effective date of the document.  For example, the Document Date would be 3/31 for a Q2 document even though the Financial Account File record might have a created date of 4/15.</inlineHelpText>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DocumentQuarter__c</fullName>
        <description>Calculates the quarter of the document based on the Document Date</description>
        <formula>CASE( MONTH( DocumentDate__c )  ,
1,"Q1",
2,"Q1",
3,"Q1",
4,"Q2",
5,"Q2",
6,"Q2",
7,"Q3",
8,"Q3",
9,"Q3",
10,"Q4",
11,"Q4",
12,"Q4",
"Q4")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the quarter of the document based on the Document Date</inlineHelpText>
        <label>Document Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <description>The type of document/file that this record represents.</description>
        <inlineHelpText>The type of document/file that this record represents</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quarterly Performance Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocumentYear__c</fullName>
        <description>Calculates the year based on the Document Date</description>
        <formula>TEXT(Year(DocumentDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the year based on the Document Date</inlineHelpText>
        <label>Document Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalFileName__c</fullName>
        <description>Name of the original file as stored on the shared directory.</description>
        <inlineHelpText>Name of the original file as stored on the shared directory.</inlineHelpText>
        <label>Original File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinancialAccount__c</fullName>
        <description>The Financial Account to which this file belongs</description>
        <inlineHelpText>The Financial Account to which this file belongs</inlineHelpText>
        <label>Financial Account</label>
        <referenceTo>FinancialAccount__c</referenceTo>
        <relationshipLabel>Financial Account Files</relationshipLabel>
        <relationshipName>FinancialAccountFiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <description>Used as a "holding object" for files related to Financial Account.  Files are posted to this record rather than directly to the Financial Account record so that we can carry data about the file in the system.  Note, at current development time it was not possible to use API calls to write data about the file to Content object.</description>
    <label>Financial Account File</label>
    <nameField>
        <displayFormat>FAF-{0000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Require_Reason_if_Do_Not_Display_Checked</fullName>
        <active>true</active>
        <description>This validation requires the user put in a Do Not Display Reason if the Do Not Display in Community checkbox is on</description>
        <errorConditionFormula>DoNotDisplayinCommunity__c  &amp;&amp;
ISBLANK( DoNotDisplayReason__c )</errorConditionFormula>
        <errorMessage>You must provide a Do Not Display Reason when Do Not Display In Community checkbox is on.</errorMessage>
    </validationRules>
</CustomObject>